# RPG_Game

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  math_test.cpp
res/: sample_person.blend  sample_person.blend1  sample_person_tex.xcf
src/: Camera.cpp  Camera.h  CollisionMesh.h  Duck.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FragmentShader.glsl  GJKAlgorithm.h  GraphicsManager.cpp  GraphicsManager.h  Hitbox.h  Math.cpp  Math.h  ModelManager.h  ObjModel.cpp  ObjModel.h  Object.cpp  Object.h  Player.h  VertexShader.glsl  a.out  model_test.cpp  model_test_out
